better config scan
Signed-off-by: Hendrik Ebbers <hendrik.ebbers@web.de>