@@ -16,7 +16,6 @@
 
 package com.swirlds.common.config;
 
-import com.swirlds.base.ArgumentUtils;
 import com.swirlds.common.constructable.URLClassLoaderWithLookup;
 import com.swirlds.config.api.ConfigData;
 import com.swirlds.config.api.ConfigurationBuilder;
@@ -26,6 +25,7 @@ import io.github.classgraph.ClassInfoList;
 import io.github.classgraph.ScanResult;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -34,10 +34,16 @@ import java.util.stream.Collectors;
  */
 public final class ConfigUtils {
 
+    private static final String SWIRLDS_PACKAGE = "com.swirlds";
+    private static final String HEDERA_PACKAGE = "com.hedera";
+
     private ConfigUtils() {}
 
     /**
-     * Scan all classes in a classpath and register all configuration data types with a configuration builder.
+     * Scan all classes in classpath/modulepath and register all configuration data types with a configuration builder.
+     * This call will only scan the {@code com.swirlds} and {@code com.hedera} packages. If you want to scan all
+     * available packages you need to call {@link #scanAndRegisterAllConfigTypes(ConfigurationBuilder, Set)} with an
+     * empty string Set.
      *
      * @param configurationBuilder a configuration builder
      * @return the configuration builder that was passed as a param (for fluent api)
@@ -45,11 +51,12 @@ public final class ConfigUtils {
     @NonNull
     public static ConfigurationBuilder scanAndRegisterAllConfigTypes(
             @NonNull final ConfigurationBuilder configurationBuilder) {
-        return scanAndRegisterAllConfigTypes(configurationBuilder, Collections.emptySet(), Collections.emptyList());
+        return scanAndRegisterAllConfigTypes(configurationBuilder, Set.of(SWIRLDS_PACKAGE, HEDERA_PACKAGE));
     }
 
     /**
-     * Scan all classes in a classpath and register all configuration data types with a configuration builder.
+     * Scan all classes in a classpath and register all configuration data types with a configuration builder. If the
+     * given {@code packagePrefixes} array is empty all packages will be scanned.
      *
      * @param configurationBuilder a configuration builder
      * @param packagePrefixes      the package prefixes to scan
@@ -57,9 +64,9 @@ public final class ConfigUtils {
      */
     @NonNull
     public static ConfigurationBuilder scanAndRegisterAllConfigTypes(
-            @NonNull final ConfigurationBuilder configurationBuilder, @NonNull final String... packagePrefixes) {
-        ArgumentUtils.throwArgNull(packagePrefixes, "packagePrefixes");
-        return scanAndRegisterAllConfigTypes(configurationBuilder, Set.of(packagePrefixes), Collections.emptyList());
+            @NonNull final ConfigurationBuilder configurationBuilder, @NonNull final Set<String> packagePrefixes) {
+        Objects.requireNonNull(packagePrefixes, "packagePrefixes must not be null");
+        return scanAndRegisterAllConfigTypes(configurationBuilder, packagePrefixes, Collections.emptyList());
     }
 
     /**
@@ -75,7 +82,7 @@ public final class ConfigUtils {
             @NonNull final ConfigurationBuilder configurationBuilder,
             @NonNull final Set<String> packagePrefixes,
             @NonNull final List<URLClassLoaderWithLookup> additionalClassLoaders) {
-        ArgumentUtils.throwArgNull(configurationBuilder, "configurationBuilder");
+        Objects.requireNonNull(configurationBuilder, "configurationBuilder must not be null");
         loadAllConfigDataRecords(packagePrefixes, additionalClassLoaders)
                 .forEach(configurationBuilder::withConfigDataType);
         return configurationBuilder;
@@ -85,8 +92,8 @@ public final class ConfigUtils {
     private static Set<Class<? extends Record>> loadAllConfigDataRecords(
             @NonNull final Set<String> packagePrefixes,
             @NonNull final List<URLClassLoaderWithLookup> additionalClassLoaders) {
-        ArgumentUtils.throwArgNull(packagePrefixes, "packagePrefix");
-        ArgumentUtils.throwArgNull(additionalClassLoaders, "additionalClassLoaders");
+        Objects.requireNonNull(packagePrefixes, "packagePrefix must not be null");
+        Objects.requireNonNull(additionalClassLoaders, "additionalClassLoaders must not be null");
 
         final ClassGraph classGraph = new ClassGraph().enableAnnotationInfo();
 
